references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/RequirementUsage_Invalid.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:85ab764a21667495733cdfb7e938a389cde69ce65378c1fe1fb865bbbfdac0f5
size 3547
